started to implement the welcome page
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@122 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/DocPerl/Welcome.pod
+++ b/DocPerl/Welcome.pod
@@ -8,7 +8,15 @@
 
 =item *
 
-L<perlfunc>
+L<perlfunc>: Perl function documentation
+
+=item *
+
+L<http://sourceforge.net/tracker/?group_id=163244&atid=826975>: Bug reporting
+
+=item *
+
+L<http://docperl.sourceforge.net>: DocPerl home page
 
 =back
 
