--- a/DocPerl/Config.pod
+++ b/DocPerl/Config.pod
@@ -4,33 +4,34 @@ DocPerl::Config - Details on the configuration setting for the DocPerl applicati
 
 =head1 VERSION
 
-This documentation refers to DocPerl::Config version 0.5.
+This documentation refers to DocPerl::Config version 0.9.2.
 
 =head1 DESCRIPTION
 
 DocPerl's configuration is stored in the file docperl.conf which is an ini
-style file.
+style file which is broken into several sections.
 
 =head2 Sections
 
 =head3 LocalFolders
 
-This sets parameters of the local section
+This sets parameters of the local section, these files not found in the @INC
+path usually setup to be your local working POD files.
 
 =over 4
 
 =item Path
 
-A colon seperated list of directories to search
+A colon seperated list of directories to search for files
 
 =item Exclude
 
-A colon seperated list of directories to exclude from the search path
+A colon seperated list of directories to exclude from the search path.
 
 =item Match
 
 A regular expression to decide which files to include in the list. If not
-specified it will be created from the suffixes option
+specified it will be created from the suffixes option.
 
 =item suffixes
 
@@ -41,38 +42,38 @@ specify more that one suffix repeat the suffixes option multiple tiems e.g.
  suffixes: pod
  suffixes: pl
 
-It should replace Match for general file searching.
-
 =back
 
 =head3 IncFolders
 
-The system wide installed perl modules section. Similar to LocalFolders
-execpt Path is added to the global @INC path.
+The system wide perl modules section. IncFilders is similar to the
+LocalFolders execpt Path is added to the global @INC path. Also any
+module/file starting with pod:: is put into the Perl section on the list
+page.
 
 =head3 Templates
 
-Sets parameters to be sent to L<Template> Toolkit
+Sets parameters to be sent to L<Template> Toolkit.
 
 =over 4
 
 =item Path
 
-Sets the search path for templates
+Sets the search path for templates.
 
 =item history_size
 
-See L<Template> Toolkit documentation
+See L<Template> Toolkit documentation.
 
 =back
 
 =head3 Template
 
-This allows you to set general parameters that are passed to all templates
+This allows you to set general parameters that are passed to all templates.
 
 =head3 General
 
-This section sets up parameters that are used for running DocPerl
+This section sets up parameters that are used for running DocPerl.
 
 =over 4
 
@@ -83,7 +84,7 @@ stored.
 
 =item Perl
 
-The location of ther perl executable (used when creating POD files)
+The location of ther perl executable (used when creating POD files).
 
 =item Cache
 
@@ -97,7 +98,7 @@ permissions to write to the disk.
 
 Allows a user of the web interface to clear the cache (which is usefull when
 new modules are installed and the list page is cached and becomes out of
-date)
+date).
 
  'on' turns on this feature
  anything else turns this off
@@ -109,7 +110,7 @@ this could cause a lot of extra load on your server.
 
 =head2 URL Parameters
 
-Here is a summary of the url parameters
+Here is a summary of the url parameters.
 
 =over 4
 
@@ -122,19 +123,19 @@ needs to be done. Some more important values are:
 
 =item list
 
-Shows the module list page
+Shows the module list page.
 
 =item pod
 
-Shows the Plain Old Documentation for the module
+Shows the Plain Old Documentation for the module.
 
 =item api
 
-Shows the API of the module (includes sub, modules used, module hirachy etc)
+Shows the API of the module (includes sub, modules used, module hirachy etc).
 
 =item code
 
-Syntax highlighted version of the module
+Syntax highlighted version of the module.
 
 =back
 
@@ -142,31 +143,29 @@ Syntax highlighted version of the module
 
 Sets the perl module to be displaied. This can be represented in one of two
 forms: either standard perl form (Config::Std) or as a path from the list
-page (inc__c__Config__Std). In path from location does not need to be specified
+page (inc__c__Config__Std). In path from location does not need to be specified.
 
 =item file
 
-The file on the file system
+The file on the file system.
 
 =item location
 
-The section that the file is from (inc,local or perl)
+The section that the file is from (inc,local or perl).
 
 =item source
 
-The relative perl file path (relative to search paths)
+The relative perl file path (relative to search paths).
 
 =item clearcache
 
-Instructs DocPerl to clear it's cache (if allowed)
+Instructs DocPerl to clear it's cache (if allowed).
 
 =item sidebar
 
 Alters the link taget on the list page so that when the list page is used for
 a firefox sidebar it displays the pages in the correct place.
 
-=item
-
-=item
+=back
 
 =cut
