Fixed spellings and execptions
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@354 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/lib/DocPerl/Config.pod
+++ b/lib/DocPerl/Config.pod
@@ -127,7 +127,7 @@ When set to a true value shows the cpan test status link for the current module
 =item static
 
 Set the web path prefix for static files. This is useful if you can't serve
-static files (such as js & images) from the same location as docperl.cgi.
+static files (such as javascript & images) from the same location as docperl.cgi.
 
 =back
 
